Fix detection of FFMpeg in AppImages

AppImage changes its mount point on every run, hence the location
of ffmpeg changes as well. We should reconfigure it if possible.

BUG:474927